--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id
 NEXT_PUBLIC_APP_URL=your_app_url
 GEMINI_API_KEY=your_gemini_api_key
 ADMIN_PASSWORD=your_admin_password
+GOOGLE_DRIVE_ROOT_FOLDER_ID=your_root_folder_id
