--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "react-textarea-autosize": "^8.5.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.4.0",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.10.0",
+    "tw-animate-css": "^1.4.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/animejs": "^3.1.12",
     "@types/canvas-confetti": "^1.6.4",
     "@types/lodash": "^4.17.13",
@@ -83,7 +83,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
