--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-seo": "^7.0.1",
     "next-themes": "^0.4.4",
     "npm": "^10.9.2",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.4.1",
